--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile files('C:/Users/karin/AndroidStudioProjects/Helloworld-kato/libs/socketio.jar')
+    compile project(':volley')
 }
